--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </script>
 </head>
 <body>
+<title>ET Senate Values</title>  
   
 <hr>
 <button class="button" onclick="location.href='instructions.html';" style="font-size:36pt;">Click here to start!</button>
