--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </script>
 </head>
 <body>
-<title>ET Senate Values</title>  
-  
+<h1>8values</h1> 
 <hr>
 <button class="button" onclick="location.href='instructions.html';" style="font-size:36pt;">Click here to start!</button>
 <img src="values.svg" class="center"></img>
