--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   
 <hr>
-<h1>8values</h1>
+<h1>ET Senate Values</h1>
 <button class="button" onclick="location.href='instructions.html';" style="font-size:36pt;">Click here to start!</button>
 <img src="values.svg" class="center"></img>
 <h2>What is 8values?</h2>
